opentofu/module/my-web-app/networking.tf
resource "aws_security_group" "web_sg"{
    name = "${var.env}-${var.region}-web-sg"
    description = "Allow SSH port 22 and HTTP port 80"
    vpc_id = data.aws_vpc.default.id

    ingress{
        description = "SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress{
        description = "HTTP"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress{
        description = "Allow all outbound traffic"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
